--- a/vsdev/UnknownMath.vcxproj.filters
+++ b/vsdev/UnknownMath.vcxproj.filters
@@ -39,4 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\doc\CoordinateSys.md">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
