--- a/vsdev/UnitTest/UnitTest.vcxproj
+++ b/vsdev/UnitTest/UnitTest.vcxproj
@@ -21,6 +21,9 @@
   <ItemGroup>
     <ClCompile Include="..\..\benchmark\TEST.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\benchmark\MatTestSet.hpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{53686919-82AA-407D-AD77-E52B9E47F0A0}</ProjectGuid>
@@ -76,6 +79,10 @@
     <IncludePath>../../gtest/include;$(IncludePath)</IncludePath>
     <LibraryPath>../../gtest/lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>../../gtest/include;$(IncludePath)</IncludePath>
+    <LibraryPath>../../gtest/lib;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -108,6 +115,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
